--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
+    "csv-parser": "^3.0.0",
     "ejs": "^3.1.9",
     "express": "^4.19.1",
     "request": "^2.88.2"
