--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "csv-parser": "^3.0.0",
     "ejs": "^3.1.9",
     "express": "^4.19.1",
+    "odm": "^1.0.0",
     "request": "^2.88.2"
   }
 }
